--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,10 @@
+image:
+  file: Dockerfile
 ports:
     - port: 8000
     - port: 3000    
 
 tasks:
-    - init: sudo curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
     - command: >
           pyenv global 3.7.4 &&
           pipenv shell
