--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+django = "==2.2.7"
+djangorestframework = "==3.10.3"
 
 [requires]
 python_version = "3.7"
