--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "==2.4.4"
 
 [packages]
 django = "==2.2.7"
 djangorestframework = "==3.10.3"
+gunicorn = "==20.0.2"
+django-heroku = "==0.3.1"
 
 [requires]
 python_version = "3.7"
